# StrixReady-CLI

./: .gitignore  pyproject.toml  requirements.txt  utils.py
backend/: analyzer.py  generator.py
cli/: main.py
strix/: README.md
strix/backend/: health.py  main.py
strix/cli/: main.py
strix/templates/: devcontainer.json
templates/: docker-compose.yml
